--- a/proposal.qmd
+++ b/proposal.qmd
@@ -27,11 +27,10 @@ The dataset includes weather data for states and cities, based on specific dates
 
 -   A well formulated research question. (You may include more than one research question if you want to receive feedback on different ideas for your project. However, one per data set is required.)
 
-<<<<<<< HEAD
--   The data gives the temperature that is predicted at 12, 24 and 36 hours before the temperature was observed and then the actual temeprature observed. We will look at how the difference in predicted vs observed temperature changes depending on the amount of time between the forecast and the observed temperature. We will then look at how this difference fluctuates by the state the the forecasts and obseravtions are made in. 
-=======
+-   The data gives the temperature that is predicted at 12, 24 and 36 hours before the temperature was observed and then the actual temeprature observed. We will look at how the difference in predicted vs observed temperature changes depending on the amount of time between the forecast and the observed temperature. We will then look at how this difference fluctuates by the state the the forecasts and observations are made in. 
+
 -   A description of the research topic along with a concise statement of your hypotheses on this topic.
->>>>>>> 20bf8c468fb990d7ebc342c74cac2604f32cbec9
+
 
 -   Identify the types of variables in your research question. Categorical? Quantitative?
 
