--- a/proposal.qmd
+++ b/proposal.qmd
@@ -74,7 +74,7 @@ It has been collected over 43 years by people reporting sightings of UFOs to thi
 
 -   Write a brief description of the observations. 
 
-The observations are each a different sighting of a UFO as reported by the user.
+The observations are each a different sighting of a UFO as reported by the user. There are both categorical and quantitative variables in the dataset. The categorical variables include the location (city, state, and country) of the UFO sighting, as well as a description of the UFO. Some of the quantitative variables include the encounter length with the UFO and the latitude and longitude of the sighting.
 
 ## Research question
 
@@ -88,7 +88,7 @@ The research topic investigates the difference in descriptions of UFOs based on 
 
 -   Identify the types of variables in your research question. Categorical? Quantitative?
 
-There are both categorical and quantitative variables in the dataset. The categorical variables include the location (city, state, and country) of the UFO sighting, as well as a description of the UFO. Some of the quantitative variables include the encounter length with the UFO and the latitude and longitude of the sighting.
+There are both categorical and quantitative variables in the research question. The categorical variables include the location (city, state, and country) of the UFO sighting, as well as a description of the UFO. The quantitative variable includes the number of sightings in each location.
 
 ## Literature
 
