--- a/report.qmd
+++ b/report.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Project title"
+title: "Stat Legends Investigate Fast Food"
 subtitle: "Report"
 format: html
 editor: visual
@@ -7,4 +7,8 @@ execute:
   echo: true
 ---
 
-Add project writeup here.
+**INTRODUCTION**
+
+**METHODOLOGY**
+
+**RESULTS**
