--- a/report.qmd
+++ b/report.qmd
@@ -9,6 +9,8 @@ execute:
 
 **INTRODUCTION**
 
+Research Question: How is the number of calories effected by total carbohydrate content and cholesterol level?
+
 **METHODOLOGY**
 
 **RESULTS**
