fixed the validity of the research question, closes #3

--- a/report.qmd
+++ b/report.qmd
@@ -11,6 +11,6 @@ execute:
 
 Research Question: How is the number of calories effected by total carbohydrate content and cholesterol level?
 
-**METHODOLOGY**
+**METHODOLOGY:**
 
 **RESULTS**
