--- a/about.qmd
+++ b/about.qmd
@@ -4,10 +4,10 @@ format: html
 editor: visual
 ---
 
-This project was developed by **\[team name\]** For [STA 199: Introduction to Data Science](https://sta199-s23-2.github.io/) at Duke University. The team is comprised of the following team members.
+This project was developed by **Stat Legends** For [STA 199: Introduction to Data Science](https://sta199-s23-2.github.io/) at Duke University. The team is comprised of the following team members.
 
 -   Joshua Abbas is a freshman, double majoring in Statistics and Computer Science.
 -   Julia Gambino is a sophomore, majoring in Biology and minoring in Global Health on the pre-health track.
--   Zach is a sophomore majoring in political science and pursuing the markets and management certificate. 
--   Team member 4: One sentence description of Team member 4 (e.g., year, major, etc.).
+-   Zach Beischer is a sophomore majoring in political science and pursuing the markets and management certificate.
+-   Ashka Shah is a junior majoring in Biology and minoring in Global Health and Computational Biology. 
 -   ...
