--- a/about.qmd
+++ b/about.qmd
@@ -10,4 +10,4 @@ This project was developed by **Stat Legends** For [STA 199: Introduction to Dat
 -   Julia Gambino is a sophomore, majoring in Biology and minoring in Global Health on the pre-health track.
 -   Zach Beischer is a sophomore majoring in political science and pursuing the markets and management certificate.
 -   Ashka Shah is a junior majoring in Biology and minoring in Global Health and Computational Biology. 
--   Hayden is a sophmore majoring in Neurosciene and minoring in computational biology and chemistry He is also from New Jersey. 
+-   Hayden is a sophomore majoring in Neurosciene and minoring in computational biology and chemistry He is also from New Jersey. 
