--- a/report.qmd
+++ b/report.qmd
@@ -15,6 +15,6 @@ Research Question: How is the number of calories affected by total carbohydrate 
 
 We will re-level the cholesterol variable to create a qualitative variable that describes whether the cholesterol is above or below recommended levels (which is 200mg if you are at risk of heart disease and 300mg if you are healthy).
 
-We will then create an interactive linear regression model to compare the relationship between number of calories and the cholesterol level and total carbohydrates. We will also create
+We will then create an interactive linear regression and an additive linear regression model to compare the relationship between number of calories and the cholesterol level and total carbohydrates. We will also facet wrap all of the graphs by restaurant to control the relationships of the variables
 
 **RESULTS**
