--- a/proposal.qmd
+++ b/proposal.qmd
@@ -16,27 +16,25 @@ library(tidyverse)
 
 ## Introduction and data
 
--   Identify the source of the data.
-The source of the data is USA National Weather Service. 
+-   Identify the source of the data. The source of the data is USA National Weather Service.
 
 -   State when and how it was originally collected (by the original data curator, not necessarily how you found the data).
 
-The USA national weather service gave predicted weather forecasts at 12, 24 and 36 hours before the temperature was observed and then the actual temperature observed for 167 cities across the nation. Data collection started January 30th 2021 and lasted 16 months. 
+The USA national weather service gave predicted weather forecasts at 12, 24 and 36 hours before the temperature was observed and then the actual temperature observed for 167 cities across the nation. Data collection started January 30th 2021 and lasted 16 months.
 
 -   Write a brief description of the observations.
 
-The dataset includes weather data for states and cities, based on specific dates and times of observations. The dataset also provides information on predicted versus observed temperature, as well as predicted versus observed precipitation. Each observation is a specific date and time that includes the above variables.  
+The dataset includes weather data for states and cities, based on specific dates and times of observations. The dataset also provides information on predicted versus observed temperature, as well as predicted versus observed precipitation. Each observation is a specific date and time that includes the above variables.
 
 ## Research question
 
 -   A well formulated research question. (You may include more than one research question if you want to receive feedback on different ideas for your project. However, one per data set is required.)
 
-
-The data gives the temperature that is predicted at 12, 24 and 36 hours before the temperature was observed and then the actual temperature observed. We answer the question: how does the difference in predicted versus observed temperature change depending on the amount of time between the forecast and the observed temperature? We will then look at how this difference fluctuates by the state the the forecasts and observations are made in. 
+The data gives the temperature that is predicted at 12, 24 and 36 hours before the temperature was observed and then the actual temperature observed. We answer the question: how does the difference in predicted versus observed temperature change depending on the amount of time between the forecast and the observed temperature? We will then look at how this difference fluctuates by the state the the forecasts and observations are made in.
 
 -   A description of the research topic along with a concise statement of your hypotheses on this topic.
 
-Our group wanted to look at weather forecasts and the factors taht effect the accuracy of those forecasts like time between prediction and observation and the location of the observation. This could help determine which regions have better weather forecasting capabilities and how time plays a role in this prediction. Our hypothesis is that the weather forecast accuracy will be positively correlated with a shorter time before the observation and that states away from the ocean and great lakes will have better accuracy of forecasts. 
+Our group wanted to look at weather forecasts and the factors taht effect the accuracy of those forecasts like time between prediction and observation and the location of the observation. This could help determine which regions have better weather forecasting capabilities and how time plays a role in this prediction. Our hypothesis is that the weather forecast accuracy will be positively correlated with a shorter time before the observation and that states away from the ocean and great lakes will have better accuracy of forecasts.
 
 -   Identify the types of variables in your research question. Categorical? Quantitative?
 
@@ -46,16 +44,13 @@ Our research question contains three quantitative variables (predicted and actua
 
 -   Find one published credible article on the topic you are interested in researching.
 
-https://scijinks.gov/forecast-reliability/
-This is a reliable article from the National Oceanic and Atmospheric Administration of the US Department of Commerce. 
+https://scijinks.gov/forecast-reliability/ This is a reliable article from the National Oceanic and Atmospheric Administration of the US Department of Commerce.
 
--   Provide a one paragraph summary about the article.
-A five day forecast is right about 90 percent of the time, however a ten day forecast is only right about half of the time. Thus, there is a pretty large difference in forecast accuracy over this five day period. Forecasts are made by meteorologists, who use computers to create weather models. A lot of the data for these models comes from satalites. The atmosphere is everchanging, and these models are based on future assumptions, so the further into the future, the harder it is to predict. 
-
+-   Provide a one paragraph summary about the article. A five day forecast is right about 90 percent of the time, however a ten day forecast is only right about half of the time. Thus, there is a pretty large difference in forecast accuracy over this five day period. Forecasts are made by meteorologists, who use computers to create weather models. A lot of the data for these models comes from satalites. The atmosphere is everchanging, and these models are based on future assumptions, so the further into the future, the harder it is to predict.
 
 -   In 1-2 sentences, explain how your research question builds on / is different than the article you have cited.
 
-This article deals with longer periods between the forecast and actual observation. Some are as long as 10 days in advance. Our dataset deals with forecasts that are much closer to the actual observed temperature, which may provide a different picture.  
+This article deals with longer periods between the forecast and actual observation. Some are as long as 10 days in advance. Our dataset deals with forecasts that are much closer to the actual observed temperature, which may provide a different picture.
 
 ## Glimpse of data
 
@@ -70,15 +65,15 @@ glimpse(weather_forecasts)
 
 ## Introduction and data
 
--   Identify the source of the data. 
+-   Identify the source of the data.
 
 The data comes from the National UFO Reporting Center and consists of 80,332 reported sightings of UFOs.
 
--   State when and how it was originally collected (by the original data curator, not necessarily how you found the data). 
+-   State when and how it was originally collected (by the original data curator, not necessarily how you found the data).
 
 It has been collected over 43 years by people reporting sightings of UFOs to this website until June 2019.
 
--   Write a brief description of the observations. 
+-   Write a brief description of the observations.
 
 The observations are each a different sighting of a UFO as reported by the user. There are both categorical and quantitative variables in the dataset. The categorical variables include the location (city, state, and country) of the UFO sighting, as well as a description of the UFO. Some of the quantitative variables include the encounter length with the UFO and the latitude and longitude of the sighting.
 
@@ -102,7 +97,7 @@ There are both categorical and quantitative variables in the research question. 
 
 https://www.sciencedirect.com/science/article/pii/S2590291121000206
 
--   Provide a one paragraph summary about the article. 
+-   Provide a one paragraph summary about the article.
 
 This articles describes "presents a psychosocial study based on the statistical justification of the UFO Experiences Questionnaire (UFO-Q), which examines the underlying dimensions of UFO experiences and beliefs, as well as their social impact on the Spanish-speaking culture." The article found that UFO questionaire that they created was well created and clearly investigates the difference between magical and rational explanations for UFOs.
 
